WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278391
Shadows on split inlines don't respect -webkit-box-decoration-break
https://bugs.webkit.org/show_bug.cgi?id=278391
Summary
Shadows on split inlines don't respect -webkit-box-decoration-break
Simon Fraser (smfr)
Reported
2024-08-20 10:04:20 PDT
Created
attachment 472248
[details]
Test case Test case shows a bug where we fail to omit shadows on the broken edges of split inlines.
Attachments
Test case
(1.05 KB, text/html)
2024-08-20 10:04 PDT
,
Simon Fraser (smfr)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-20 10:04:41 PDT
<
rdar://problem/134352347
>
Simon Fraser (smfr)
Comment 2
2024-09-05 19:49:23 PDT
Probably explains these failures: imported/w3c/web-platform-tests/css/css-backgrounds/box-shadow/slice-inline-fragmentation-001.html imported/w3c/web-platform-tests/css/css-backgrounds/box-shadow/slice-inline-fragmentation-002.html imported/w3c/web-platform-tests/css/css-backgrounds/box-shadow/slice-inline-fragmentation-003.html
Simon Fraser (smfr)
Comment 3
2025-02-28 17:56:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41689
Simon Fraser (smfr)
Comment 4
2025-02-28 17:57:16 PST
In these tests: imported/w3c/web-platform-tests/css/css-backgrounds/box-shadow/slice-inline-fragmentation-002.html imported/w3c/web-platform-tests/css/css-backgrounds/box-shadow/slice-inline-fragmentation-003.html the shadow extends outside of the inline boxes, which is surprising. They seem to match Firefox behavior, but not Chrome behavior.
EWS
Comment 5
2025-03-01 09:04:10 PST
Committed
291441@main
(a5c1c22754ef): <
https://commits.webkit.org/291441@main
> Reviewed commits have been landed. Closing PR #41689 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug