Shadows on split inlines don't respect -webkit-box-decoration-break https://bugs.webkit.org/show_bug.cgi?id=278391 rdar://134352347

Reviewed by Alan Baradlay.

Clip out the non-present ("closed") edges of box shadows on split inlines.

This fixes `css/css-backgrounds/box-shadow/slice-inline-fragmentation-003.html`.

slice-inline-fragmentation-001.html and slice-inline-fragmentation-002.html also
have improved behavior, but don't match the (questionable?) references.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/BackgroundPainter.cpp:
(WebCore::BackgroundPainter::paintBoxShadow const):

Canonical link: https://commits.webkit.org/291441@main